--- a/src/output.css
+++ b/src/output.css
@@ -556,49 +556,6 @@ video {
   display: none;
 }
 
-.container{
-  width: 100%;
-}
-
-@media (min-width: 640px){
-  .container{
-    max-width: 640px;
-  }
-}
-
-@media (min-width: 768px){
-  .container{
-    max-width: 768px;
-  }
-}
-
-@media (min-width: 1024px){
-  .container{
-    max-width: 1024px;
-  }
-}
-
-@media (min-width: 1280px){
-  .container{
-    max-width: 1280px;
-  }
-}
-
-@media (min-width: 1536px){
-  .container{
-    max-width: 1536px;
-  }
-}
-
-.col-auto{
-  grid-column: auto;
-}
-
-.mx-auto{
-  margin-left: auto;
-  margin-right: auto;
-}
-
 .mb-\[33px\]{
   margin-bottom: 33px;
 }
@@ -609,10 +566,6 @@ video {
 
 .ml-auto{
   margin-left: auto;
-}
-
-.ms-auto{
-  margin-inline-start: auto;
 }
 
 .flex{
@@ -627,14 +580,6 @@ video {
   height: 57px;
 }
 
-.h-screen{
-  height: 100vh;
-}
-
-.h-full{
-  height: 100%;
-}
-
 .min-h-screen{
   min-height: 100vh;
 }
@@ -643,24 +588,16 @@ video {
   width: 57px;
 }
 
-.w-\[100\%\]{
-  width: 100%;
-}
-
-.max-w-lg{
-  max-width: 32rem;
+.max-w-\[300px\]{
+  max-width: 300px;
 }
 
 .max-w-\[540px\]{
   max-width: 540px;
 }
 
-.max-w-\[300px\]{
-  max-width: 300px;
-}
-
-.flex-grow{
-  flex-grow: 1;
+.max-w-\[350px\]{
+  max-width: 350px;
 }
 
 .grid-cols-1{
@@ -683,16 +620,16 @@ video {
   gap: 1rem;
 }
 
+.gap-\[25px\]{
+  gap: 25px;
+}
+
 .gap-\[76px\]{
   gap: 76px;
 }
 
 .gap-px{
   gap: 1px;
-}
-
-.gap-\[25px\]{
-  gap: 25px;
 }
 
 .space-y-\[25px\] > :not([hidden]) ~ :not([hidden]){
@@ -703,10 +640,6 @@ video {
 
 .rounded-lg{
   border-radius: 0.5rem;
-}
-
-.border-0{
-  border-width: 0px;
 }
 
 .border-t-4{
@@ -818,12 +751,6 @@ video {
   opacity: 0.5;
 }
 
-.shadow{
-  --tw-shadow: 0 1px 3px 0 rgb(0 0 0 / 0.1), 0 1px 2px -1px rgb(0 0 0 / 0.1);
-  --tw-shadow-colored: 0 1px 3px 0 var(--tw-shadow-color), 0 1px 2px -1px var(--tw-shadow-color);
-  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
-}
-
 .shadow-card{
   --tw-shadow: 0px 15px 30px -11px hsla(229, 6%, 66%, 0.5);
   --tw-shadow-colored: 0px 15px 30px -11px var(--tw-shadow-color);
@@ -831,15 +758,63 @@ video {
 }
 
 @media (min-width: 1024px){
-  .lg\:row-span-2{
-    grid-row: span 2 / span 2;
+  .lg\:mb-1\.5{
+    margin-bottom: 0.375rem;
   }
 
-  .lg\:block{
-    display: block;
+  .lg\:mb-10{
+    margin-bottom: 2.5rem;
+  }
+
+  .lg\:w-16{
+    width: 4rem;
   }
 
   .lg\:grid-cols-3{
     grid-template-columns: repeat(3, minmax(0, 1fr));
+  }
+
+  .lg\:gap-\[-3px\]{
+    gap: -3px;
+  }
+
+  .lg\:gap-6{
+    gap: 1.5rem;
+  }
+
+  .lg\:gap-\[60px\]{
+    gap: 60px;
+  }
+
+  .lg\:gap-\[30px\]{
+    gap: 30px;
+  }
+
+  .lg\:space-y-\[30px\] > :not([hidden]) ~ :not([hidden]){
+    --tw-space-y-reverse: 0;
+    margin-top: calc(30px * calc(1 - var(--tw-space-y-reverse)));
+    margin-bottom: calc(30px * var(--tw-space-y-reverse));
+  }
+
+  .lg\:p-8{
+    padding: 2rem;
+  }
+
+  .lg\:py-\[80px\]{
+    padding-top: 80px;
+    padding-bottom: 80px;
+  }
+
+  .lg\:pt-\[80px\]{
+    padding-top: 80px;
+  }
+
+  .lg\:text-4xl{
+    font-size: 2.25rem;
+    line-height: 2.5rem;
+  }
+
+  .lg\:tracking-\[\.25px\]{
+    letter-spacing: .25px;
   }
 }
